# wnoz-schedule

./: .gitignore  README.md  pyproject.toml
.github/workflows/: regenerate-files.yml  regenerate.yml
app/: ci.py
app/ph_schedule/: ph_schedule_activity.py  ph_schedule_dataframe_utils.py  ph_schedule_downloader.py  ph_schedule_legend.py  ph_schedule_reader.py  ph_schedule_xls_parser.py  ph_weekday_slice.py
artifacts/2024-licencjackie-stacjonarne/: activities.json  calendar.ics  info.json
artifacts/2024-licencjackie-stacjonarne/1a/: activities.json  calendar.ics
artifacts/2024-licencjackie-stacjonarne/1b/: activities.json  calendar.ics
artifacts/2024-licencjackie-stacjonarne/2a/: activities.json  calendar.ics
artifacts/2024-licencjackie-stacjonarne/2b/: activities.json  calendar.ics
artifacts/2024-licencjackie-stacjonarne/3a/: activities.json  calendar.ics
artifacts/2024-licencjackie-stacjonarne/3b/: activities.json  calendar.ics
artifacts/2024-licencjackie-stacjonarne/4a/: activities.json  calendar.ics
artifacts/2024-licencjackie-stacjonarne/4b/: activities.json  calendar.ics
artifacts/2024-licencjackie-stacjonarne/5a/: activities.json  calendar.ics
docs/: CNAME  index.html
docs/assets/: index-B580hhT7.js  index-C1uP41FA.css  index-CcwVK2kG.css  index-UylSb_Yk.js  index-fnhRZg4o.css  index-h-XSyxPG.js  worker-BPR9uYe8.js  worker-eYT4GM95.js
schedule-frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
schedule-frontend/public/: README.md
schedule-frontend/src/: App.css  App.tsx  index.css  main.tsx
(+16 files in other folders)
