[tool.poetry]
name = "wnoz-schedule"
version = "0.1.0"
description = ""
authors = ["Michał Oręziak <micorix.dev@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
polars = "^1.4.1"
xlrd = "^2.0.1"
ics = "^0.7.2"
pytz = "^2024.2"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
flake8 = "^7.1.1"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
